themes/siz/assets/css/screen.css
/* ... */
.no-cover .main-nav.overlay,
.no-cover .back-button,
.no-cover .subscribe-button {
    background: none;
}

.main-nav.overlay a {
    color: #fff;
}

.main-nav.overlay .back-button,
.main-nav.overlay .subscribe-button {
    border-color: rgba(255,255,255,0.6);
}

.main-nav.overlay a:hover {
    color: #222;
    border-color: #fff;
    background: #fff;
    transition: all 0.1s ease;
}

/* Add a border to the buttons on hover */
.back-button:hover,
.subscribe-button:hover {
    border-color: #bfc8cd;
    color: #9EABB3;
}

/* The details of your blog. Defined in ghost/settings/ */
.page-title {
    margin: 10px 0 10px 0;
    font-size: 5rem;
    letter-spacing: -1px;
    font-weight: 700;
    font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
    color: #fff;
}

.page-description {
    margin: 0;
    font-size: 2rem;
    line-height: 1.5em;
    font-weight: 400;
    font-family: "Merriweather", serif;
    letter-spacing: 0.01rem;
    color: rgba(255,255,255,0.8);
}

.no-cover.main-header {
    min-height: 160px;
    max-height: 40%;
    background: #f5f8fa;
}

.no-cover .page-title {
    color: rgba(0,0,0,0.8);
}

.no-cover .page-description {
    color: rgba(0,0,0,0.5);
}

.no-cover .main-nav.overlay .back-button,
.no-cover .main-nav.overlay .subscribe-button {
    color: rgba(0,0,0,0.4);
    border-color: rgba(0,0,0,0.3);
}

/* Add subtle load-in animation for content on the home page */
.home-template .page-title {
    -webkit-animation: fade-in-down 0.6s;
    animation: fade-in-down 0.6s;
    -webkit-animation-delay: 0.2s;
    animation-delay: 0.2s;
}
.home-template .page-description {
    -webkit-animation: fade-in-down 0.9s;
    animation: fade-in-down 0.9s;
    -webkit-animation-delay: 0.1s;
    animation-delay: 0.1s;
}

/* Every post, on every page, gets this style on its <article> tag */
.post {
    position: relative;
    width: 80%;
    max-width: 710px;
    margin: 4rem auto;
    padding-bottom: 4rem;
    border-bottom: #EBF2F6 1px solid;
    word-break: break-word;
    hyphens: auto;
}

body:not(.post-template) .post-title {
    font-size: 3.1rem;
}

.post-title a {
    text-decoration: none;
}

.post-excerpt p {
    margin: 0;
    font-size: 0.9em;
    line-height: 1.7em;
}

.read-more {
    text-decoration: none;
}

.post-meta {
    display: block;
    margin: 1.75rem 0 0 0;
    font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
    font-size: 1.5rem;
    line-height: 2.2rem;
    color: #9EABB3;
}

.author-thumb {
    width: 24px;
    height: 24px;
    float: left;
    margin-right: 9px;
    border-radius: 100%;
}

.post-meta a {
    color: #9EABB3;
    text-decoration: none;
}

.post-meta a:hover {
    text-decoration: underline;
}

.user-meta {
    position: relative;
    padding: 0.3rem 40px 0 100px;
    min-height: 77px;
}

.post-date {
    display: inline-block;
    font-size: 1.3rem;
    white-space: nowrap;
}

.user-image {
    position: absolute;
    top: 0;
    left: 0;
}

.user-name {
    display: block;
    font-weight: 700;
}

.user-bio {
    display: block;
    max-width: 440px;
    font-size: 1.4rem;
    line-height: 1.5em;
}

.publish-meta {
    position: absolute;
    top: 0;
    right: 0;
    padding: 4.3rem 0 4rem 0;
    text-align: right;
}

.publish-heading {
    display: block;
    font-weight: 700;
}

.publish-date {
    display: block;
    font-size: 1.4rem;
    line-height: 1.5em;
}

.btn{
  display: inline-block;
  margin-bottom: 0;
  padding: 9px 14px;
  font-size: 1.1rem;
  line-height: 1.428571429;
  font-weight: 300;
  text-align: center;
  text-transform: uppercase;
  text-shadow: none;
  letter-spacing: 1px;
  vertical-align: middle;
  cursor: pointer;
  background-image: none;
  border: 1px solid transparent;
  white-space: nowrap;
  border-radius: 2px;
  -webkit-user-select: none;
  text-decoration:none;
  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
}

.btn-blue{
  color: #fff;
  background-color: #5BA4E5;
  border-color: #4598e2;
  -webkit-transition: background 0.2s ease, border-color 0.2s ease;
  transition: background 0.2s ease, border-color 0.2s ease;
}
.btn-blue:hover{
  color:#fff;
  background-color: #2f8cde;
  border-color: #207ac9;
}
.btn-lg {
  padding: 12px 18px;
  font-size: 1.4rem;
  line-height: 1.33;
  border-radius: 4px;
}
/* ==========================================================================
   5. Single Post - When you click on an individual post
   ========================================================================== */

.post-template .post-header {
   margin-bottom: 1em;
   margin-top: 1em;
}

.post-template .post-title {
    margin-bottom: 0;
    font-size: 2.3em;
}

.post-template .post-meta {
    margin: 0;
}

.post-template .post-date {
    padding: 0;
    margin: 0;
    border: none;
}

/* Stop .full-img from creating horizontal scroll - slight hack due to
   imperfections with browser width % calculations and rounding */
.post-template .content {
    overflow: hidden;
}

/* Tweak the .post wrapper style */
.post-template .post {
    margin-top: 0;
    border-bottom: none;
    padding-bottom: 0;
}

/* Kill that stylish little circle that was on the border, too */
.post-template .post:after {
    display: none;
}

/* Keep images centred and within the bounds of the post-width */
.post-content img {
    display: block;
    max-width: 100%;
    height: 394px;
    margin: 0 auto;
    padding: 0.6em 0;
}

/* Break out larger images to be wider than the main text column
   the class is applied with jQuery */
.post-content .img-inline {
    display: inline-block;
    max-width: 100%;
    height: 394px;
    margin: 0 auto;
    padding: 0.6em 0;
}

/* The author credit area after the post */
.post-footer {
    position: relative;
    margin: 6rem 0 0 0;
    padding: 6rem 0 0 0;
    border-top: #EBF2F6 1px solid;
}

.post-footer h4 {
    font-size: 1.8rem;
    margin: 0;
    color: #ff0002;
}

.post-footer p {
    margin: 1rem 0;
    font-size: 1.4rem;
    line-height: 1.75em;
}
/* ... */

